Grease Pencil selections fail when GP layer is parented to an animated object #85987

Closed
opened 2021-02-25 16:01:43 +01:00 by Nathan Clark · 15 comments

Blender bug report

System Information
System 1:
Operating system: MacOS 10.15.7
Graphics card: AMD Radeon Pro 5700 XT 16 GB

System 2:
Operating system: Windows 10
Graphics card: Geforce Titan X

Blender Version
Broken: Tried on 2.91, 2.92 & 2.93

Short description of error
Performing point selections in a Grease Pencil object becomes very glitchy when the GP layer is parented via relations to an animated object.

Exact steps for others to reproduce the error
Open the attached .blend file.
Enter edit mode on the grease pencil object.
Attempt to make a box selection. If bug is present, the selection will miss many points.
Scrub the timeline to a new point in the animation. Try make another selection. Notice how hard it is to select points. Tweak mode is also affected.

Here is a screen recording of the issue in case that's useful: https://www.dropbox.com/s/gjtjsfsp7r9tdo1/screen%20recording%202021-02-26%20at%201.27.51%20am.mov?dl=0

Thanks :)Grease Pencil Selection Bug Demo 02.blend

Blender bug report **System Information** System 1: Operating system: MacOS 10.15.7 Graphics card: AMD Radeon Pro 5700 XT 16 GB System 2: Operating system: Windows 10 Graphics card: Geforce Titan X **Blender Version** Broken: Tried on 2.91, 2.92 & 2.93 **Short description of error** Performing point selections in a Grease Pencil object becomes very glitchy when the GP layer is parented via relations to an animated object. **Exact steps for others to reproduce the error** Open the attached .blend file. Enter edit mode on the grease pencil object. Attempt to make a box selection. If bug is present, the selection will miss many points. Scrub the timeline to a new point in the animation. Try make another selection. Notice how hard it is to select points. Tweak mode is also affected. Here is a screen recording of the issue in case that's useful: https://www.dropbox.com/s/gjtjsfsp7r9tdo1/screen%20recording%202021-02-26%20at%201.27.51%20am.mov?dl=0 Thanks :)[Grease Pencil Selection Bug Demo 02.blend](https://archive.blender.org/developer/F9838845/Grease_Pencil_Selection_Bug_Demo_02.blend)
Author

Added subscriber: @Neigh

Added subscriber: @Neigh
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this. There must be an issue with the evaluated data not being used in the selection operators.

I can confirm this. There must be an issue with the evaluated data not being used in the selection operators.
Falk David self-assigned this 2021-02-26 16:45:49 +01:00
Author

Hi David, I just wanted to say thanks for accepting the bug report and claiming the task. I also want to note that Curve Edit Mode in 2.92+ is similarly affected by this bug (I realise I showed this in my screen capture, but didn't make note of it in the text). This bug is limiting what would otherwise be a very powerful workflow in GP: Basically rigging up a kind of puppet for the base animation, with the flexibility to modify strokes on the fly as an additive process. I'm working around this semi-successfully using the sculpt tools, but they lack precision. I can't wait to further explore this workflow when the bug is squished.

Anyway, thanks for your amazing work :)

Nathan

Hi David, I just wanted to say thanks for accepting the bug report and claiming the task. I also want to note that Curve Edit Mode in 2.92+ is similarly affected by this bug (I realise I showed this in my screen capture, but didn't make note of it in the text). This bug is limiting what would otherwise be a very powerful workflow in GP: Basically rigging up a kind of puppet for the base animation, with the flexibility to modify strokes on the fly as an additive process. I'm working around this semi-successfully using the sculpt tools, but they lack precision. I can't wait to further explore this workflow when the bug is squished. Anyway, thanks for your amazing work :) Nathan
Member

I think the desync with the curves is a separate issue: #85787. It's a separate problem that has to do with the underlying design. We will fix this in 2.93.

I think the desync with the curves is a separate issue: #85787. It's a separate problem that has to do with the underlying design. We will fix this in 2.93.
Member

@Neigh Could you confirm for me that this is not happening with Circle nor Lasso select? That would be helpful :)

@Neigh Could you confirm for me that this is not happening with **Circle** nor **Lasso** select? That would be helpful :)

This issue was referenced by 4b16cb1e9a

This issue was referenced by 4b16cb1e9aff4410cda1e2182e73330c814f99ac
Author

Sure thing, I just tested and bug is present with lasso selection … but the circle selection seems to actually make an accurate selection, but there is some weird visible UI glitching while using the tool (random points appearing for brief moments that are not part of the stroke)… here's another screen recording if useful: https://www.dropbox.com/s/m541u1jplhzb4jr/Screen%20Recording%202021-02-27%20at%207.30.08%20pm.mov?dl=0

Sure thing, I just tested and bug is present with lasso selection … but the circle selection seems to actually make an accurate selection, but there is some weird visible UI glitching while using the tool (random points appearing for brief moments that are not part of the stroke)… here's another screen recording if useful: https://www.dropbox.com/s/m541u1jplhzb4jr/Screen%20Recording%202021-02-27%20at%207.30.08%20pm.mov?dl=0
Member

@Neigh Ah ok sorry, yes lasso select should be affected. Perfect. I have a fix then :). The issue with the points you are seeing is a known visual glitch. They are not actual points.

@Neigh Ah ok sorry, yes lasso select should be affected. Perfect. I have a fix then :). The issue with the points you are seeing is a known visual glitch. They are not actual points.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

This is now fixed in master and added to the list of fixes to a potential 2.92.1 corrective release.

This is now fixed in master and added to the list of fixes to a potential 2.92.1 corrective release.
Author

Wow that's fantastic, what a pleasant experience it's been reporting this bug and having it handled with such expedience. Thank you very much :)

Wow that's fantastic, what a pleasant experience it's been reporting this bug and having it handled with such expedience. Thank you very much :)
Author

Hi again,

Sorry to say but I believe I have found another area of Grease Pencil suffering from this selection bug. It appears that whenever the GP object is parented, the sculpt tools fail to affect the stroke. The only tool that works as expected is the grab brush, while the others fail. To replicate, open up the original attached .blend file and attempt to use sculpt brushes on the parented GP object, only the grab brush will function.

Here's another demonstration of the issue (dropbox video)

Sorry I didn't pick this up before submitting the initial report

Thanks, Nathan

Hi again, Sorry to say but I believe I have found another area of Grease Pencil suffering from this selection bug. It appears that whenever the GP object is parented, the sculpt tools fail to affect the stroke. The only tool that works as expected is the grab brush, while the others fail. To replicate, open up the original attached .blend file and attempt to use sculpt brushes on the parented GP object, only the grab brush will function. [Here's another demonstration of the issue (dropbox video)](https://www.dropbox.com/s/faryp64zfvvadsr/Screen%20Recording%202021-02-28%20at%2011.12.20%20am.mov?dl=0) Sorry I didn't pick this up before submitting the initial report Thanks, Nathan
Member

Hi @Neigh ! Please open it as a new report to keep things organized. You can do it through Blender then Help > Report a Bug (that way the submission template fills out all the system information for you).

Hi @Neigh ! Please open it as a new report to keep things organized. You can do it through Blender then *Help* > *Report a Bug* (that way the submission template fills out all the system information for you).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85987
No description provided.